<resources>
    <string name="app_name">MATRICULAPAS</string>
    <string name="n_matricula">Matricula</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre</string>
    <string name="cuit">CUIT</string>
    <string name="ramo">Ramo</string>
    <string name="domicilio">Domicilio</string>
    <string name="localidad">Localidad</string>
    <string name="provincia">Provincia</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="salir">Salir</string>
    <string name="item1">Acerca de</string>
    <string name="item2">Salir</string>
    <string name="intro_titulo">MATRICULAPAS</string>
    <string name="text_intro_izq">MATRICULA</string>
    <string name="text_intro_der">PAS</string>
    <string name="buscar_dialogo">Buscar Matricula</string>
    <string name="title_activity_acerca">Acerca</string>
    <string name="switch1_str">¿Sociedad?</string>
    <string name="textoff">No</string>
    <string name="texton">Si</string>
    <string name="acerca_text">© 2017 MATRICULAPAS.  Aplicación mantenida por el grupo de asesores de seguros \"PROTEGER\".  Esta herramienta no es oficial de la SSN, sin embargo los datos mostrados si lo son. La finalidad de esta utilidad es hacer llegar al usuario la facil comprobacion de la matricula del profesional.</string>
    <string name="logo_proteger_desc">Logo PROTEGER</string>
    <string name="ssn_logo_desc">SSN Logo</string>
    <string name="switch2_str">Buscar por DNI</string>
    <string name="generar_credencial">Generar Credencial</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir_menu">Salir</string>
</resources>
